--- a/src/App.css
+++ b/src/App.css
@@ -33,13 +33,13 @@
   border-radius: 4px;
 }
 
-.navbar-links {
+.navbar-links a {
   color: white;
   text-decoration: none;
   margin-left: 20px;
   font-size: 16px;
 }
 
-.navbar-links:hover {
+.navbar-links a:hover {
   text-decoration: underline;
 }
