--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,62 @@
 .navbar-links a:hover {
   text-decoration: underline;
 }
+
+.userProfile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.profile-card {
+  box-shadow: 0 7px 12px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 1000px;
+  height: 650px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.profile-picture {
+  width: 100%;
+  max-width: 200px;
+  margin: 0 auto 20px;
+  display: block;
+  border-radius: 50%;
+}
+
+.profile-name {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.profile-description {
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #333;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  max-width: 600px;
+}
+
+.button {
+  padding: 10px 20px;
+  background: #4e2a84;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.button:hover {
+  background: #3b2064;
+}
