--- a/src/css/App.css
+++ b/src/css/App.css
@@ -6,8 +6,10 @@
 
 .profiles-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   gap: 20px;
   width: 100%;
-  max-width: 1200px;
+  max-width: 1650px;
+  margin: 20px 20px;
+  justify-content: center;
 }
