--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -13,3 +13,21 @@
   margin: 20px 20px;
   justify-content: center;
 }
+
+.search-container {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  width: 100%;
+  max-width: 400px;
+  justify-content: center;
+}
+
+.search-bar {
+  width: 100%;
+  max-width: 400px;
+  padding: 8px;
+  border: none;
+  border-radius: 4px;
+}
