--- a/src/css/ProfileCard.css
+++ b/src/css/ProfileCard.css
@@ -22,8 +22,9 @@
 
 .profile-name {
     text-align: center;
-    padding: 15px;
+    padding: 10px;
     font-size: 1.5em;
+    height: 75px;
     color: #333;
     font-weight: bold;
     border-bottom: 1px solid #eee;
@@ -35,6 +36,7 @@
     font-size: 0.9em;
     line-height: 1.6;
     color: #666;
+    height: 200px;
 }
 
 .button-container {
@@ -43,6 +45,7 @@
     align-items: center;
     width: 100%;
     max-width: 600px;
+    margin-bottom: 20px;
 }
 
 .button {
